--- a/style.css
+++ b/style.css
@@ -9,5 +9,7 @@ body {
   text-tansform: uppercase;
   border-bottom: 1px solid;
   border-top: 1px solid;
-  text-align: center
+  text-align: center; 
+ 
+    
 }
