--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   text-tansform: uppercase;
   border-bottom: 1px solid;
   border-top: 1px solid;
+  background-color: rgba(0,0,0, 0.1);
   text-align: center; 
  
     
